# dataforge-mcp-gateway

./: .env.example  .gitignore  03_MCP_TOOLS_SPEC.md  04_DATAFORGE_API_MAPPING.md  05_CONFIG_AND_SECURITY.md  08_TEST_PLAN.md  09_CLAUDE_MD.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 01_PRODUCT_SCOPE.md  02_TARGET_ARCHITECTURE.md  06_IMPLEMENTATION_PLAN.md  07_REPOSITORY_BOOTSTRAP.md  10_BUILD_PROMPTS.md
docs/api/: configuration.md  schemas.md  tools-data-model.md  tools-semantic.md
src/dataforge_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  main.py
src/dataforge_mcp/application/: use_cases.py
src/dataforge_mcp/cache/: store.py
src/dataforge_mcp/dataforge/: __init__.py  client.py  schemas.py
src/dataforge_mcp/mcp/: __init__.py  server.py  tools.py
src/dataforge_mcp/semantic/: __init__.py  models.py  normalizer.py
src/dataforge_mcp/transport/: __init__.py  sse.py  stdio.py
tests/: conftest.py  test_cache.py  test_client.py  test_normalizer.py  test_tools.py
